--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@headlessui/react": "^1.7.18",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@types/nodemailer": "^6.4.14",
+    "dotenv": "^16.4.5",
     "next": "14.1.0",
+    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18"
   },
